// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test call array 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": Array {
          "items": Array [
            String {
              "isDoubleQuote": true,
              "kind": "string",
              "raw": "\\"Foo\\"",
              "unicode": false,
              "value": "Foo",
            },
            String {
              "isDoubleQuote": true,
              "kind": "string",
              "raw": "\\"bar\\"",
              "unicode": false,
              "value": "bar",
            },
          ],
          "kind": "array",
          "shortForm": false,
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call array parens 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": Array {
          "items": Array [
            String {
              "isDoubleQuote": true,
              "kind": "string",
              "raw": "\\"Foo\\"",
              "unicode": false,
              "value": "Foo",
            },
            String {
              "isDoubleQuote": true,
              "kind": "string",
              "raw": "\\"bar\\"",
              "unicode": false,
              "value": "bar",
            },
          ],
          "kind": "array",
          "parenthesizedExpression": true,
          "shortForm": false,
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside offsetlookup 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": OffsetLookup {
        "kind": "offsetlookup",
        "offset": String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"offset\\"",
          "unicode": false,
          "value": "offset",
        },
        "what": Call {
          "arguments": Array [
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "obj",
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "get_class",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside propertylookup 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "propertylookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "property",
        },
        "what": Call {
          "arguments": Array [
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "obj",
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "get_class",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (2) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": Call {
            "arguments": Array [],
            "kind": "call",
            "what": StaticLookup {
              "kind": "staticlookup",
              "offset": Identifier {
                "kind": "identifier",
                "name": "call",
              },
              "what": Call {
                "arguments": Array [],
                "kind": "call",
                "what": StaticLookup {
                  "kind": "staticlookup",
                  "offset": Identifier {
                    "kind": "identifier",
                    "name": "call",
                  },
                  "what": Call {
                    "arguments": Array [
                      Variable {
                        "byref": false,
                        "curly": false,
                        "kind": "variable",
                        "name": "obj",
                      },
                    ],
                    "kind": "call",
                    "what": ClassReference {
                      "kind": "classreference",
                      "name": "get_class",
                      "resolution": "uqn",
                    },
                  },
                },
              },
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (3) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "property",
        },
        "what": Call {
          "arguments": Array [
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "obj",
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "get_class",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (4) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "property",
        },
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "property",
          },
          "what": StaticLookup {
            "kind": "staticlookup",
            "offset": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "property",
            },
            "what": Call {
              "arguments": Array [
                Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "obj",
                },
              ],
              "kind": "call",
              "what": ClassReference {
                "kind": "classreference",
                "name": "get_class",
                "resolution": "uqn",
              },
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (5) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "CONSTANT",
        },
        "what": Call {
          "arguments": Array [
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "obj",
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "get_class",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (6) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Literal {
          "kind": "literal",
          "value": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "property",
          },
        },
        "what": Call {
          "arguments": Array [
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "get_class",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (7) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Literal {
          "kind": "literal",
          "value": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "property",
          },
        },
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Literal {
            "kind": "literal",
            "value": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "property",
            },
          },
          "what": StaticLookup {
            "kind": "staticlookup",
            "offset": Literal {
              "kind": "literal",
              "value": Variable {
                "byref": false,
                "curly": false,
                "kind": "variable",
                "name": "property",
              },
            },
            "what": Call {
              "arguments": Array [
                Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "var",
                },
              ],
              "kind": "call",
              "what": ClassReference {
                "kind": "classreference",
                "name": "get_class",
                "resolution": "uqn",
              },
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (8) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Literal {
          "kind": "literal",
          "value": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"property\\"",
            "unicode": false,
            "value": "property",
          },
        },
        "what": Call {
          "arguments": Array [
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "get_class",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (9) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Literal {
          "kind": "literal",
          "value": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "property",
          },
        },
        "what": Call {
          "arguments": Array [
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "get_class",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (10) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": Call {
          "arguments": Array [],
          "kind": "call",
          "what": StaticLookup {
            "kind": "staticlookup",
            "offset": Identifier {
              "kind": "identifier",
              "name": "call",
            },
            "what": ClassReference {
              "kind": "classreference",
              "name": "Order",
              "resolution": "uqn",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup (11) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Literal {
            "kind": "literal",
            "value": Call {
              "arguments": Array [],
              "kind": "call",
              "what": ClassReference {
                "kind": "classreference",
                "name": "call",
                "resolution": "uqn",
              },
            },
          },
          "what": ClassReference {
            "kind": "classreference",
            "name": "Order",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call inside staticlookup 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": Call {
            "arguments": Array [
              Variable {
                "byref": false,
                "curly": false,
                "kind": "variable",
                "name": "obj",
              },
            ],
            "kind": "call",
            "what": ClassReference {
              "kind": "classreference",
              "name": "get_class",
              "resolution": "uqn",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call multiple (2) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": PropertyLookup {
          "kind": "propertylookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": Call {
            "arguments": Array [],
            "kind": "call",
            "what": PropertyLookup {
              "kind": "propertylookup",
              "offset": Identifier {
                "kind": "identifier",
                "name": "call",
              },
              "what": Call {
                "arguments": Array [],
                "kind": "call",
                "what": PropertyLookup {
                  "kind": "propertylookup",
                  "offset": Identifier {
                    "kind": "identifier",
                    "name": "call",
                  },
                  "what": Variable {
                    "byref": false,
                    "curly": false,
                    "kind": "variable",
                    "name": "obj",
                  },
                },
              },
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call multiple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": Call {
          "arguments": Array [],
          "kind": "call",
          "what": Call {
            "arguments": Array [],
            "kind": "call",
            "what": ClassReference {
              "kind": "classreference",
              "name": "call",
              "resolution": "uqn",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call multiple arguments 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [
          Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "a",
          },
          Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "b",
          },
          Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "c",
          },
        ],
        "kind": "call",
        "what": ClassReference {
          "kind": "classreference",
          "name": "call",
          "resolution": "uqn",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call nested 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [
          Call {
            "arguments": Array [
              Call {
                "arguments": Array [],
                "kind": "call",
                "what": ClassReference {
                  "kind": "classreference",
                  "name": "call",
                  "resolution": "uqn",
                },
              },
            ],
            "kind": "call",
            "what": ClassReference {
              "kind": "classreference",
              "name": "call",
              "resolution": "uqn",
            },
          },
        ],
        "kind": "call",
        "what": ClassReference {
          "kind": "classreference",
          "name": "call",
          "resolution": "uqn",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call offsetlookup 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": OffsetLookup {
          "kind": "offsetlookup",
          "offset": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"index\\"",
            "unicode": false,
            "value": "index",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "array",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call parent 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "call",
                    },
                    "what": ParentReference {
                      "kind": "parentreference",
                      "raw": "parent",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "fn",
          },
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call propertylookup (2) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": PropertyLookup {
          "kind": "propertylookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": PropertyLookup {
            "kind": "propertylookup",
            "offset": Identifier {
              "kind": "identifier",
              "name": "property",
            },
            "what": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "obj",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call propertylookup 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": PropertyLookup {
          "kind": "propertylookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "obj",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call self 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "call",
                    },
                    "what": SelfReference {
                      "kind": "selfreference",
                      "raw": "self",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "fn",
          },
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call simple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": ClassReference {
          "kind": "classreference",
          "name": "call",
          "resolution": "uqn",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call single argument 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [
          Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "a",
          },
        ],
        "kind": "call",
        "what": ClassReference {
          "kind": "classreference",
          "name": "call",
          "resolution": "uqn",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call static 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "call",
                    },
                    "what": StaticReference {
                      "kind": "staticreference",
                      "raw": "static",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "fn",
          },
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call staticlookup (2) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": ClassReference {
            "kind": "classreference",
            "name": "Foo",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call staticlookup 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "obj",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call string 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": String {
          "isDoubleQuote": true,
          "kind": "string",
          "parenthesizedExpression": true,
          "raw": "\\"func\\"",
          "unicode": false,
          "value": "func",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call variable function (2) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": PropertyLookup {
          "kind": "propertylookup",
          "offset": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "func",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "obj",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call variable function (3) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "func",
          },
          "what": ClassReference {
            "kind": "classreference",
            "name": "Foo",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test call variable function 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "func",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
